--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,10 @@
     "vlucas/phpdotenv": "^2.4.0",
     "roave/security-advisories": "dev-master",
     "craftcms/element-api": "2.6.0",
-    "craftcms/redactor": "2.6.1"
+    "craftcms/redactor": "2.6.1",
+    "chasegiunta/scss": "^1.0",
+    "mmikkel/cp-field-inspect": "^1.1",
+    "nystudio107/craft-cookies": "^1.1"
   },
   "config": {
     "optimize-autoloader": true
