--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "src/main.js",
   "scripts": {
     "start": "webpack --mode development --config webpack.dev.js && webpack-dev-server --mode development --hot --config webpack.server.js",
+    "watch": "webpack --watch --config webpack.dev.js && webpack --mode development --config webpack.dev.js && webpack-dev-server --mode development --hot --config webpack.server.js",
     "build": "webpack --mode production --config webpack.prod.js"
   },
   "repository": {
@@ -38,16 +39,20 @@
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^3.0.4",
     "prettier": "^1.10.2",
+    "sass": "^1.26.5",
+    "sass-loader": "^8.0.2",
     "style-loader": "^0.20.1",
     "vue-loader": "^14.1.1",
     "vue-template-compiler": "^2.5.15",
-    "webpack": "^4.0.1",
+    "webpack": "^4.43.0",
     "webpack-cli": "^2.0.9",
     "webpack-dev-server": "^3.1.0",
     "webpack-merge": "^4.1.0"
   },
   "dependencies": {
     "axios": "^0.17.1",
+    "node-sass": "^4.14.1",
+    "npm-watch": "^0.6.0",
     "picturefill": "^3.0.2",
     "vue": "^2.5.15"
   }
